# WitechFTP

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
src/: filetreewidget.cpp  filetreewidget.h  ftpcommunicator.cpp  ftpcommunicator.h  langstrings.cpp  langstrings.h  layout.cpp  local_browser.cpp  main.cpp  mainwindow.cpp  mainwindow.h  remote_browser.cpp  resources.qrc  saved_sites.cpp  transfers.cpp
